# cart_api/api.py
@@ -4,7 +4,8 @@ import falcon
 from swagger_ui import falcon_api_doc
 from cart_api.routes.heartbeat import Heartbeat
 from cart_api.routes.products import Product, Products
-
+from cart_api.routes.cartitems import CartItem, CartItems
+from cart_api.routes.notes import NoteList, Note
 
 # Instantiate RESTful API and resources
 api = falcon.App(cors_enable=True)
@@ -12,11 +13,19 @@ api.req_options.strip_url_path_trailing_slash = True
 hb = Heartbeat()
 product = Product()
 products = Products()
+cart_item = CartItem()
+cart_items = CartItems()
+note = Note()
+note_list = NoteList()
 
 # Define our API's routes
 api.add_route("/heartbeat", hb)
 api.add_route("/v1/products/{product_id:int}", product)
 api.add_route("/v1/products", Products())
+api.add_route("/v1/cartitems/{cart_item_id:int}", cart_item)
+api.add_route("/v1/cartitems", CartItems())
+api.add_route("/v1/notelist/{note_id:int}", note)
+api.add_route("/v1/notelist", NoteList())
 
 # Add a route which serves our OpenAPI specification
 falcon_api_doc(
