# cart_api/routes/products.py
@@ -18,10 +18,26 @@ class Product:
 # Products route should respond to GET and POST requests
 # GET products returns a list of every product in the database
 # POST products creates a product and returns the data it created
-
-
 class Products:
-    pass  # must have a pass line because you cannot have a "blank" class
-    # def on_get(self, req, resp):
+    def on_get(self, req, resp):
+        return_data = []
+        products = DatabaseProducts.select()
+        for product in products:
+            return_data.append(model_to_dict(product))
 
-    # def on_post(self, req, resp):
+        resp.media = return_data
+        resp.status = falcon.HTTP_200
+
+    def on_post(self, req, resp):
+        obj = req.get_media()
+        new_product = DatabaseProducts(
+            name=obj.get('name'),
+            description=obj.get('description'),
+            image_url=obj.get('image_url'),
+            price=obj.get('price'),
+            is_on_sale=obj.get('is_on_sale'),
+            sale_price=obj.get('sale_price')
+        )
+        new_product.save()
+        resp.media = model_to_dict(new_product)
+        resp.status = falcon.HTTP_201
